pass_1/tests/should-pass/SimpleMain.java
class SimpleMain {
    public static void main(String[] a){
        System.out.println(3310);
    }
} 
